# GenTXT

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  GenTxt.spec  LICENCE  Makefile  README.md  concatenation_rapide.sh  gentxt.desktop  index.html  install_gentxt.sh  makefile_result.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  sitemap.xml  uninstall_gentxt.sh
.github/workflows/: ci.yml
changelog/: index.html
development/: index.html
development/architecture/: index.html
development/build-release/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: changelog.md  index.md
docs/development/: architecture.md  build-release.md  contributing.md  index.md  testing.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/reference/: cli.md  config-schema.md  index.md
docs/user-guide/: gui.md  headless.md  index.md  output-format.md
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/: index.html
reference/cli/: index.html
reference/config-schema/: index.html
search/: search_index.json
src/: main.py
src/gentxt/: __init__.py  config.py  core.py  dialogs.py  headless.py  main.py
tests/: conftest.py
tests/integration/: test_concat_pipeline.py  test_headless_mode.py
tests/non_regression/: test_golden_output.py
tests/unit/: test_config.py  (+4 more)
user-guide/: index.html
(+19 files in other folders)
